--- a/Real-estate-frontend/package.json
+++ b/Real-estate-frontend/package.json
@@ -15,13 +15,18 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/react": "^2.1.10",
     "antd": "^5.23.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
+    "lucide-react": "^0.474.0",
     "radix-ui": "^1.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "real-estate-frontend": "file:",
-    "swiper": "^11.2.2"
+    "swiper": "^11.2.2",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
