--- a/Real-estate-frontend/package.json
+++ b/Real-estate-frontend/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
+    "framer-motion": "^12.4.0",
     "lucide-react": "^0.474.0",
     "radix-ui": "^1.1.2",
     "react": "^18.3.1",
