--- a/Real-estate-frontend/package.json
+++ b/Real-estate-frontend/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/react": "^2.1.10",
     "antd": "^5.23.3",
+    "apexcharts": "^4.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.474.0",
     "radix-ui": "^1.1.2",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "real-estate-frontend": "file:",
