--- a/Real-estate-frontend/package.json
+++ b/Real-estate-frontend/package.json
@@ -31,8 +31,10 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
     "react-slider": "^2.0.6",
     "real-estate-frontend": "file:",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
