--- a/Real-estate-frontend/package.json
+++ b/Real-estate-frontend/package.json
@@ -30,6 +30,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
+    "react-range": "^1.10.0",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
     "react-slider": "^2.0.6",
